--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <link href="https://fonts.googleapis.com/css?family=Dosis|Libre+Franklin|Nanum+Gothic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dosis|Libre+Franklin|Nanum+Gothic|Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/notgrid.css">
     <link rel="stylesheet" href="css/grid.css">
@@ -269,34 +269,78 @@
           </div>
           <!-- Swiper -->
           <div class="swiper-container">
-            <div class="parallax-bg" style="background-image:url(images/skillbg.jpg)" data-swiper-parallax="-23%"></div>
+            <div class="parallax-bg" style="background-image:linear-gradient(rgba(23, 35, 42, 0.8),rgba(23, 35, 42, 0.4)), url(images/skillbg.jpg)" data-swiper-parallax="-23%"></div>
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <div class="title" data-swiper-parallax="-300">Slide 1</div>
-                <div class="subtitle" data-swiper-parallax="-200">Subtitle</div>
-                <div class="text" data-swiper-parallax="-100">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam dictum mattis velit, sit amet faucibus felis iaculis nec. Nulla laoreet justo vitae porttitor porttitor. Suspendisse in sem justo. Integer laoreet magna nec elit suscipit, ac laoreet nibh euismod. Aliquam hendrerit lorem at elit facilisis rutrum. Ut at ullamcorper velit. Nulla ligula nisi, imperdiet ut lacinia nec, tincidunt ut libero. Aenean feugiat non eros quis feugiat.</p>
+                <div class="skill-warpper">
+                  <img src="images/videoEditing.jpg">
+                  <div class="skill-content">
+                    <div class="text-warpper">
+                      <h3>Post Production</h3>
+                      <h4>Tools: Adobe Premiere Pro, Adobe Affter Effects</h4>
+                      <p>I have been using video editing software since 2012. The year after, I learned After Effects and get into the world of animation, visual effect, 3d space and other stuff.  </p>
+                    </div>
+                    <div class="level-warpper">
+                      <h3>LEVEL :</h3>
+                      <div class="level-bar">
+                        <div id="veLevel">85%</div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
               <div class="swiper-slide">
-                <div class="title" data-swiper-parallax="-300" data-swiper-parallax-opacity="0">Slide 2</div>
-                <div class="subtitle" data-swiper-parallax="-200">Subtitle</div>
-                <div class="text" data-swiper-parallax="-100">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam dictum mattis velit, sit amet faucibus felis iaculis nec. Nulla laoreet justo vitae porttitor porttitor. Suspendisse in sem justo. Integer laoreet magna nec elit suscipit, ac laoreet nibh euismod. Aliquam hendrerit lorem at elit facilisis rutrum. Ut at ullamcorper velit. Nulla ligula nisi, imperdiet ut lacinia nec, tincidunt ut libero. Aenean feugiat non eros quis feugiat.</p>
+                <div class="skill-warpper">
+                  <img src="images/graphicDesign.jpg">
+                  <div class="skill-content">
+                    <div class="text-warpper">
+                      <h3>Graphic Design</h3>
+                      <h4>Tools: Adobe Photoshop, Adobe Illustrator</h4>
+                      <p>When I was young, I find my interest in illustrating. After getting into uni, the interest formally turnned into skills on making graphic designs.</p>
+                    </div>
+                    <div class="level-warpper">
+                      <h3>LEVEL :</h3>
+                      <div class="level-bar">
+                        <div id="gdLevel">75%</div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
               <div class="swiper-slide">
-                <div class="title" data-swiper-parallax="-300">Slide 3</div>
-                <div class="subtitle" data-swiper-parallax="-200">Subtitle</div>
-                <div class="text" data-swiper-parallax="-100">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam dictum mattis velit, sit amet faucibus felis iaculis nec. Nulla laoreet justo vitae porttitor porttitor. Suspendisse in sem justo. Integer laoreet magna nec elit suscipit, ac laoreet nibh euismod. Aliquam hendrerit lorem at elit facilisis rutrum. Ut at ullamcorper velit. Nulla ligula nisi, imperdiet ut lacinia nec, tincidunt ut libero. Aenean feugiat non eros quis feugiat.</p>
+                <div class="skill-warpper">
+                  <img src="images/3dSoftware.jpg">
+                  <div class="skill-content">
+                    <div class="text-warpper">
+                      <h3>3D Modelling & Animating</h3>
+                      <h4>Tools: Autodesk Maya, Maxon Cinema 4D</h4>
+                      <p>I learned 3d software mostly in college, including modelling, texturing, rigging and animating. These are basic skills required for most of the school projects. </p>
+                    </div>
+                    <div class="level-warpper">
+                      <h3>LEVEL :</h3>
+                      <div class="level-bar">
+                        <div id="thirdLevel">65%</div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
               <div class="swiper-slide">
-                <div class="title" data-swiper-parallax="-300">Slide 4</div>
-                <div class="subtitle" data-swiper-parallax="-200">Subtitle</div>
-                <div class="text" data-swiper-parallax="-100">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam dictum mattis velit, sit amet faucibus felis iaculis nec. Nulla laoreet justo vitae porttitor porttitor. Suspendisse in sem justo. Integer laoreet magna nec elit suscipit, ac laoreet nibh euismod. Aliquam hendrerit lorem at elit facilisis rutrum. Ut at ullamcorper velit. Nulla ligula nisi, imperdiet ut lacinia nec, tincidunt ut libero. Aenean feugiat non eros quis feugiat.</p>
+                <div class="skill-warpper">
+                  <img src="images/feDevelopment.png">
+                  <div class="skill-content">
+                    <div class="text-warpper">
+                      <h3>Front-End Development</h3>
+                      <h4>Tools: HTML, CSS, JavaScript</h4>
+                      <p>I start becoming interest in front-end web design just recently, cause I know that as a digital designer it is not enough to just know how to use software, but also coding. <br>By the way, this website is created all by myself, with all what I learned so far in HTML, CSS and javascript.</p>
+                    </div>
+                    <div class="level-warpper">
+                      <h3>LEVEL :</h3>
+                      <div class="level-bar">
+                        <div id="feLevel">60%</div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -315,9 +359,14 @@
             var swiper = new Swiper('.swiper-container', {
               speed: 600,
               parallax: true,
+              autoplay: {
+              delay: 8000,
+              disableOnInteraction: false,
+              },
+              grabCursor: true,
               pagination: {
                 el: '.swiper-pagination',
-                clickable: true,
+                clickable: false,
               },
               navigation: {
                 nextEl: '.swiper-button-next',
@@ -325,7 +374,6 @@
               },
             });
           </script>
-
       </main>
       <footer></footer>
     </div>
