--- a/index.html
+++ b/index.html
@@ -366,10 +366,10 @@
             var swiper = new Swiper('.swiper-container', {
               speed: 600,
               parallax: true,
-              // autoplay: {
-              // delay: 8000,
-              // disableOnInteraction: false,
-              // },
+              autoplay: {
+              delay: 8000,
+              disableOnInteraction: false,
+              },
               grabCursor: true,
               pagination: {
                 el: '.swiper-pagination',
