--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <img src="images/ic-cover.png">
                 <div class="overlay">
                   <div class="gridtext">
-                    <h3>IF LIFE CAN CTRL-Z</h3>
+                    <h3>IF LIFE CAN CONTROL Z</h3>
                     <h4>Duration: 3 min 44 sec</h4>
                   </div>
                   <i class="far fa-play-circle"></i>
@@ -344,7 +344,7 @@
                     <div class="level-warpper">
                       <h3>LEVEL :</h3>
                       <div class="level-bar">
-                        <div id="feLevel">60%</div>
+                        <div id="feLevel">65%</div>
                       </div>
                     </div>
                   </div>
@@ -357,7 +357,6 @@
             <div class="swiper-button-prev swiper-button-white"></div>
             <div class="swiper-button-next swiper-button-white"></div>
           </div>
-
           <!-- Swiper JS -->
           <script src="javascript/swiper.js"></script>
 
@@ -381,8 +380,42 @@
               },
             });
           </script>
+        </div>
+        <div id="contact">
+          <div class="contact-title">
+            <h2>CONTACT</h2>
+            <div class="underline"></div>
+          </div>
+          <div class="contact-warpper">
+            <div class="contact-content">
+              <p>Let's keep in touch. If there is anything to say, you are welcome to contact me through email, SMS or using the quick contact form.</p>
+              <p><i class="fas fa-envelope"></i>sghll@hotmail.com</p>
+              <p><i class="fas fa-phone-square"></i>+61 404634369</p>
+              <p><i class="fas fa-map-marked-alt"></i>Unit 6/12 Lomax St, Forde ACT 2914</p>
+            </div>
+          </div>
+          <div class="contact-form">
+            <form id="qcf" action="" method="post">
+              <h3>Quick Contact</h3>
+              <fieldset>
+                <input placeholder="Your name" type="text" tabindex="1" autofocus>
+              </fieldset>
+              <fieldset>
+                <input placeholder="Your Email Address" type="email" tabindex="2">
+              </fieldset>
+              <fieldset>
+                <textarea placeholder="Type your Message Here...." tabindex="5" required></textarea>
+              </fieldset>
+              <fieldset>
+                <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
+              </fieldset>
+            </form>
+          </div>
+        </div>
+        <div id="copyright">
+          <p>&copy; 2018 Shen Tianhao All rights reserved</p>
+        </div>
       </main>
-      <footer></footer>
     </div>
   </body>
 </html>
