--- a/index.html
+++ b/index.html
@@ -393,23 +393,7 @@
               <p><i class="fas fa-phone-square"></i>+61 404634369</p>
               <p><i class="fas fa-map-marked-alt"></i>Unit 6/12 Lomax St, Forde ACT 2914</p>
             </div>
-            <div class="contact-form">
-              <form id="qcf" action="" method="post">
-                <h3>Quick Contact</h3>
-                <fieldset>
-                  <input placeholder="Your name" type="text" tabindex="1" autofocus>
-                </fieldset>
-                <fieldset>
-                  <input placeholder="Your Email Address" type="text" tabindex="2">
-                </fieldset>
-                <fieldset>
-                  <textarea placeholder="Type your Message Here...." type="text" tabindex="3"></textarea>
-                </fieldset>
-                <fieldset>
-                  <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
-                </fieldset>
-              </form>
-            </div>
+            <iframe src="form.php" class="contact-form"></iframe>
           </div>
         </div>
         <div id="copyright">
