--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                   <input placeholder="Your Email Address" type="email" tabindex="2" name="email">
                 </fieldset>
                 <fieldset>
-                  <textarea placeholder="Type your Message Here...." type="text" tabindex="3" name="message"></textarea>
+                  <textarea placeholder="Type your Message Here...." type="text" tabindex="3" name="message" required></textarea>
                 </fieldset>
                 <fieldset>
                   <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
