--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
               <p><i class="fas fa-map-marked-alt"></i>Unit 6/12 Lomax St, Forde ACT 2914</p>
             </div>
             <div class="contact-form">
-              <form id="qcf" action="form_process.php" method="post">
+              <form id="qcf" action="mailto:sghll@hotmail.com" method="post">
                 <h3>Quick Contact</h3>
                 <fieldset>
                   <input placeholder="Your name" type="text" tabindex="1" name="name" autofocus>
