--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <div class="text-warpper">
             <h2>ABOUT ME</h2>
             <div class="underline"></div>
-            <p>Hi there, welcome to my personal online CV site. I am a Chinese digital designer living in Canberra. Currently I am looking for a position in the area of video, animation or graphic design. <br>To show what kind of work I am capable of doing, nothing is more intuitive than a showreel. And here I got one for you.</p>
+            <p>Hi there, welcome to my personal site. I am a Chinese digital designer living in Canberra. Currently I am looking for a position in the area of video, animation or graphic design. <br>You can <a href="Shen_CV_and_job_certifications.pdf">Click Here</a> to download my CV and job certification.<br>To show what kind of work I am capable of doing, nothing is more intuitive than a showreel. And here I got one for you.</p>
           </div>
         </div>
         <div id="showreel">
@@ -389,12 +389,22 @@
                 <div class="underline"></div>
               </div>
               <p>Let's keep in touch. If there is anything to say, you are welcome to contact me through email, SMS or using the quick contact form.</p>
-              <p><i class="fas fa-envelope"></i>sghll@hotmail.com</p>
-              <p><i class="fas fa-phone-square"></i>+61 404634369</p>
-              <p><i class="fas fa-map-marked-alt"></i>Unit 6/12 Lomax St, Forde ACT 2914</p>
+              <div class="contact-info">
+                <i class="fas fa-envelope"></i>
+                <p>sghll@hotmail.com</p>
+              </div>
+              <div class="contact-info">
+                <i class="fas fa-phone-square"></i>
+                <p>+61 404634369</p>
+              </div>
+              <div class="contact-info">
+                <i class="fas fa-map-marked-alt"></i>
+                <p>Unit 6/12 Lomax St, Forde ACT 2914</p>
+              </div>
+
             </div>
             <div class="contact-form">
-              <form id="qcf" action="mailto:sghll@hotmail.com" method="post">
+              <form id="qcf" action="mailto:sghll@hotmail.com?subject=Contact-Form-Submission" method="post" enctype="text/plain">
                 <h3>Quick Contact</h3>
                 <fieldset>
                   <input placeholder="Your name" type="text" tabindex="1" name="name" autofocus>
@@ -406,7 +416,7 @@
                   <textarea placeholder="Type your Message Here...." type="text" tabindex="3" name="message" required></textarea>
                 </fieldset>
                 <fieldset>
-                  <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
+                  <button type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
                 </fieldset>
               </form>
             </div>
