--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <div class="text-warpper">
             <h2>ABOUT ME</h2>
             <div class="underline"></div>
-            <p>Hi there, welcome to my personal site. I am a Chinese digital designer living in Canberra. Currently I am looking for a position in the area of video, animation or graphic design. <br>You can <a href="Shen_CV_and_job_certifications.pdf">Click Here</a> to download my CV and job certification.<br>To show what kind of work I am capable of doing, nothing is more intuitive than a showreel. And here I got one for you.</p>
+            <p>Hi there, welcome to my personal site. I am a Chinese digital designer living in Canberra. Currently I am looking for a position in the area of video, animation or graphic design. To download a copy of my CV, please <a href="shen_CV.pdf">click here</a>. <br>To show what kind of work I am capable of doing, nothing is more intuitive than a showreel. And here I got one for you.</p>
           </div>
         </div>
         <div id="showreel">
@@ -424,9 +424,6 @@
         </div>
         <div id="copyright">
           <p>&copy; 2018 Shen Tianhao All rights reserved</p>
-          <?php
-          echo "Copyright &copy; 1999-" . date("Y") . " W3Schools.com";
-          ?>
         </div>
       </main>
     </div>
