add icon & delete skill content

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" href="css/swiper.css">
     <script src="javascript/extra.js" defer></script>
     <script src="javascript/mobileCheck.js" defer></script>
-    <title>Shen's online resume</title>
+    <title>Shen's online folio</title>
+    <link rel="icon" type="image/gif" href="images/titleicn.png" />
   </head>
   <body>
     <div class="site-wrapper">
@@ -339,7 +340,7 @@
                     <div class="text-warpper">
                       <h3>Front-End Development</h3>
                       <h4>Tools: HTML, CSS, JavaScript</h4>
-                      <p>I start becoming interest in front-end web design just recently, cause I know that as a digital designer it is not enough to just know how to use software, but also coding. <br>By the way, this website is created all by myself, with all what I learned so far in HTML, CSS and javascript.</p>
+                      <p>I start becoming interest in front-end web design just recently, cause I know that as a digital designer it is not enough to just know how to use software, but also coding.</p>
                     </div>
                     <div class="level-warpper">
                       <h3>LEVEL :</h3>
