--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
               <form id="qcf" action="mailto:sghll@hotmail.com?subject=Contact-Form-Submission" method="post" enctype="text/plain">
                 <h3>Quick Contact</h3>
                 <fieldset>
-                  <input placeholder="Your name" type="text" tabindex="1" name="name" autofocus>
+                  <input placeholder="Your name" type="text" tabindex="1" name="name">
                 </fieldset>
                 <fieldset>
                   <input placeholder="Your Email Address" type="email" tabindex="2" name="email">
