--- a/index.html
+++ b/index.html
@@ -269,6 +269,15 @@
               <p>Edit videos for the company's entertainment programs, boardcast live event and make visual designs for posters.</p>
             </div>
           </div>
+          <div class="experience-warpper">
+            <div class="title-warpper">
+              <h3>Video Producer & Animator/ 2018</h3>
+              <h4>SilverSun Pictures</h4>
+            </div>
+            <div class="text-warpper">
+              <p>Using create animation and edit video. Help web developers make animated elements to polish site.</p>
+            </div>
+          </div>
         </div>
         <div id="skill">
           <div class="skill-title">
