--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
     <link rel="stylesheet" href="css/swiper.css">
-    <script src="javascript/extra.js" defer></script>
+    <script src="javascript/extra_bili.js" defer></script>
     <script src="javascript/mobileCheck.js" defer></script>
     <title>Shen's online folio</title>
     <link rel="icon" type="image/gif" href="images/titleicn.png" />
@@ -79,7 +79,8 @@
           </div>
         </div>
         <div id="showreel">
-          <iframe class="showreel" src="https://www.youtube.com/embed/_gSM_V9AE2A?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          <!-- <iframe class="showreel" src="https://www.youtube.com/embed/_gSM_V9AE2A?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
+          <iframe src="//player.bilibili.com/player.html?aid=33670438&cid=58951595&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
         </div>
         <div id="work">
           <div class="text-warpper">
