--- a/zh.html
+++ b/zh.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/notgrid.css">
     <link rel="stylesheet" href="css/grid.css">
-    <link rel="stylesheet" href="css/extra.css">
+    <link rel="stylesheet" href="css/extra_bili.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
     <link rel="stylesheet" href="css/swiper.css">
@@ -75,11 +75,11 @@
           <div class="text-warpper">
             <h2>关于我</h2>
             <div class="underline"></div>
-            <p>欢迎来到我的个人网站。我是一名视频设计师，目前正在寻找与视频，动画以及设计相关的工作。您可以<a href="shen_CV.pdf">点击此处</a>下载我的简历。 <br>若您想要更清楚地了解我的技能，可以观看我的个人作品剪辑。</p>
+            <p>欢迎来到我的个人网站。我是一名视频设计师，目前正在寻找与视频，动画以及设计相关的工作。您可以<a href="shen_CV_zh.pdf">点击此处</a>下载我的简历。 <br>若您想要更清楚地了解我的技能，可以观看我的个人作品剪辑。</p>
           </div>
         </div>
         <div id="showreel">
-          <iframe class="showreel" src="https://www.youtube.com/embed/_gSM_V9AE2A?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          <iframe src="//player.bilibili.com/player.html?aid=33670438&cid=58951595&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
         </div>
         <div id="work">
           <div class="text-warpper">
@@ -349,7 +349,7 @@
                     <div class="text-warpper">
                       <h3>前端开发</h3>
                       <h4>工具: HTML, CSS, JavaScript</h4>
-                      <p>毕业后我深刻了解到市场对前端人才的需要，于是自学了前端技术，包括这份个人网站在内，都是完全由我个人制作出来的。</p>
+                      <p>毕业后我深刻了解到市场对前端人才的需要，于是自学了前端技术，这个个人网站是我第一个网页设计作品。</p>
                     </div>
                     <div class="level-warpper">
                       <h3>LEVEL :</h3>
