--- a/zh.html
+++ b/zh.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/notgrid.css">
     <link rel="stylesheet" href="css/grid.css">
-    <link rel="stylesheet" href="css/extra_bili.css">
+    <link rel="stylesheet" href="css/extra.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
     <link rel="stylesheet" href="css/swiper.css">
-    <script src="javascript/extra.js" defer></script>
+    <script src="javascript/extra_bili.js" defer></script>
     <script src="javascript/mobileCheck.js" defer></script>
     <title>沈天豪的个人网站</title>
     <link rel="icon" type="image/gif" href="images/titleicn.png" />
@@ -128,8 +128,8 @@
                 <img src="images/pp-cover.png">
                 <div class="overlay">
                   <div class="gridtext">
-                    <h3>PRESIDENTIAL PLANE</h3>
-                    <h4>时长: 1 min 29 sec</h4>
+                    <h3>DONT BE A JEFF</h3>
+                    <h4>时长: 1 min 7 sec</h4>
                   </div>
                   <i class="far fa-play-circle"></i>
                 </div>
@@ -176,7 +176,7 @@
                 <img src="images/dl-cover.png">
                 <div class="overlay">
                   <div class="gridtext">
-                    <h3>AZURLANE x DRAGONLADY</h3>
+                    <h3>AZURLADY</h3>
                     <h4>时长: 1 min 31 sec</h4>
                   </div>
                   <i class="far fa-play-circle"></i>
@@ -188,8 +188,8 @@
                 <img src="images/bs-cover.png">
                 <div class="overlay">
                   <div class="gridtext">
-                    <h3>BUS SHELTER</h3>
-                    <h4>时长: 5 min 31 sec</h4>
+                    <h3>欢迎来到皇家女仆餐厅</h3>
+                    <h4>时长: 5 min 28 sec</h4>
                   </div>
                   <i class="far fa-play-circle"></i>
                 </div>
@@ -200,8 +200,8 @@
                 <img src="images/kl-cover.png">
                 <div class="overlay">
                   <div class="gridtext">
-                    <h3>KOALA COMMERCIAL</h3>
-                    <h4>时长: 1 min</h4>
+                    <h3>如果早知道驱逐舰也会被</h3>
+                    <h4>时长: 4 min 32 sec</h4>
                   </div>
                   <i class="far fa-play-circle"></i>
                 </div>
@@ -213,7 +213,7 @@
                 <div class="overlay">
                   <div class="gridtext">
                     <h3>GIRL'S ARMY</h3>
-                    <h4>时长: 2 min 59sec</h4>
+                    <h4>时长: 2 min 59 sec</h4>
                   </div>
                   <i class="far fa-play-circle"></i>
                 </div>
