--- a/zh.html
+++ b/zh.html
@@ -125,7 +125,7 @@
             </div>
             <div class="box04">
               <div class="box">
-                <img src="images/pp-cover.png">
+                <img src="images/jeff-cover.png">
                 <div class="overlay">
                   <div class="gridtext">
                     <h3>DONT BE A JEFF</h3>
@@ -185,7 +185,7 @@
             </div>
             <div class="box09">
               <div class="box">
-                <img src="images/bs-cover.png">
+                <img src="images/hy-cover.png">
                 <div class="overlay">
                   <div class="gridtext">
                     <h3>欢迎来到皇家女仆餐厅</h3>
@@ -197,7 +197,7 @@
             </div>
             <div class="box10">
               <div class="box">
-                <img src="images/kl-cover.png">
+                <img src="images/rg-cover.png">
                 <div class="overlay">
                   <div class="gridtext">
                     <h3>如果早知道驱逐舰也会被</h3>
