--- a/zh.html
+++ b/zh.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Lato" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/notgrid.css">
-    <link rel="stylesheet" href="css/grid.css">
+    <link rel="stylesheet" href="css/grid_zh.css">
     <link rel="stylesheet" href="css/extra.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
