--- a/zh.html
+++ b/zh.html
@@ -75,7 +75,7 @@
           <div class="text-warpper">
             <h2>关于我</h2>
             <div class="underline"></div>
-            <p>欢迎来到我的个人网站。我是一名视频设计师，目前正在寻找与视频，动画以及设计相关的工作。您可以<a href="shen_CV_zh.pdf">点击此处</a>下载我的简历。 <br>若您想要更清楚地了解我的技能，可以观看我的个人作品剪辑。</p>
+            <p>欢迎来到我的个人网站。我是一名数字媒体设计师，毕业于澳大利亚的新南威尔士大学艺术与设计学院，曾在悉尼与堪培拉的数家媒体公司中实习与任职。目前我正在寻找与视频，动画制作相关的工作。您可以<a href="shen_CV_zh.pdf">点击此处</a>阅读或下载我的简历。 <br>您也可以在本页面观看我的个人作品剪辑，和部分完整版的作品。</p>
           </div>
         </div>
         <div id="showreel">
@@ -232,7 +232,7 @@
               <h4>University of New Sales Wales, College of Art & Design</h3>
             </div>
             <div class="text-warpper">
-              <p>专项: 动画与视觉特效，数字媒体<br>结业时间: 2017年7月11日.</p>
+              <p>专项: 动画与视觉特效，数字媒体<br>结业时间: 2017年7月11日。</p>
             </div>
           </div>
 
@@ -257,7 +257,7 @@
               <h4>Koala Entertainment</h4>
             </div>
             <div class="text-warpper">
-              <p>制作商业推广视频，以及该公司旗下的迷你卡拉ok机器的使用说明动画。</p>
+              <p>制作商业推广视频，包括该公司旗下的迷你卡拉ok机器的使用说明动画。</p>
             </div>
           </div>
           <div class="experience-warpper">
