--- a/zh.html
+++ b/zh.html
@@ -75,7 +75,7 @@
           <div class="text-warpper">
             <h2>关于我</h2>
             <div class="underline"></div>
-            <p>欢迎来到我的个人网站。我是一名数字媒体设计师，毕业于澳大利亚的新南威尔士大学艺术与设计学院，曾在悉尼与堪培拉的数家媒体公司中实习与任职。目前我正在寻找与视频，动画制作相关的工作。您可以<a href="shen_CV_zh.pdf">点击此处</a>阅读或下载我的简历。 <br>您也可以在本页面观看我的个人作品剪辑，和部分完整版的作品。</p>
+            <p>欢迎来到我的个人网站。我是一名数字媒体设计师，毕业于澳大利亚的新南威尔士大学艺术与设计学院，曾在悉尼与堪培拉的数家媒体公司中实习与任职。目前我正在寻找与视频，动画制作相关的工作。您可以<a href="shen_CV_zh.pdf">点击此处</a>阅读或下载我的简历。您也可以在本页面观看我的个人作品剪辑，和部分完整版的作品。</p>
           </div>
         </div>
         <div id="showreel">
